# adventofcode

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run_all_tests.sh  setup.cfg  template_copy.sh
.github/workflows/: codeql-analysis.yml  pytest.yml
2015/day01/: day01.py  day01a.py  test_day01.py
2015/day02/: day02.py  test_day02.py
2015/day03/: day03.py  test_day03.py
2015/day04/: day04.py  test_day04.py
2015/day05/: day05.py  day05b.py  test_day05.py  test_day05b.py
2015/day06/: day06.py  day06b.py  test_day06.py  test_day06b.py
2015/day07/: day07.py  test_day07.py
2015/day08/: day08.py  test_day08.py
2015/day09/: day09.py  test_day09.py
2015/day10/: day10.py  test_day10.py
2015/day11/: day11.py  test_day11.py
2015/day12/: day12.py  test_day12.py
2015/day13/: day13.py  test_day13.py
2015/day14/: day14.py  test_day14.py
2015/day15/: day15.py  test_day15.py
2015/day16/: day16.py  test_day16.py
2015/day17/: day17.py  test_day17.py
2015/day18/: day18.py  test_day18.py
2015/day19/: day19.py  test_day19.py
2019/day02/: day02.py  test_day02.py
2019/day05/: day05.py  test_day05.py
2019/day06/: day06.py  test_day06.py
2019/day1/: day1.py
2019/day2/: day2.py  day2b.py
2019/day3/: day3.py  day3b.py
2019/day4/: day4.py
2019/day5/: day5.py
2020/day01/: day01_part1.py  day01_part2.py
2020/day02/: day02_part1.py  day02_part2.py
2020/day03/: day03_part1.py  day03_part2.py
2020/day04/: day04_part1.py  day04_part2.py
2020/day05/: day05_part1.py  day05_part2.py
2020/day06/: day06_part1.py  day06_part2.py  input_small.txt
2021/adjacent_finder/: adjacent_finder.py  test_adjacent_finder.py
2021/day01/: day01.py  test_day01.py
2021/day02/: day02.py  test_day02.py
2021/day03/: day03.py  test_day03.py
2021/day04/: day04.py  test_day04.py
2021/day05/: day05.py  requirements.txt  test_day05.py
2021/day06/: day06.py  test_day06.py
2021/day07/: day07.py  day07_part1_graph.py  test_day07.py
2021/day08/: day08.py  day08_part2.py  test_day08.py  test_day08_part2.py
2021/day09/: day09.py  day09_part2.py  example9.txt  test_day09.py  test_day09_part2.py
2021/day10/: day10.py  test_day10.py
2021/day11/: day11.py  test_day11.py
2022/day01/: day01.py  test_day01.py
2022/day02/: day02.py  day02_part2.py  test_day02.py  test_day02_part2.py
2022/day03/: day03.py  (+1 more)
day1/: day1.py  day1b.py
day2/: README_Day2.txt  day2.py
day3/: day3.py  day3b.py
day4/: day4.py  day4b.py
day5/: day5.py  day5b.py
helpers/: helpers.py
template/: dayXX.py  test_dayXX.py
(+281 files in other folders)
