[project]
name = "ottey_aoc"
version = "0.1.0"
description = "Dan Ottey's Advent of Code Solutions"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Daniel W. Ottey", email = "dan@bluefrogs.us" }
]

dependencies = [
    "numpy"
]

[dependency-groups]
dev = [
    "colorama",
    "matplotlib",
    "pytest>=9.0.1",
    "pytest-json-report",
    "scikit-image[data]",
    "scipy",
    "tqdm"
]

2025_day12 = [
    "polyomino"
]

[tool.ruff.lint]
ignore = [
    "D100", # Missing docstring in public module
    "D103", # Missing docstring in public function
]

[tool.mypy]
exclude = "^.*/test_.*\\.py$"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
